--- a/ReactJWTFrontend_Starter-main/src/App.css
+++ b/ReactJWTFrontend_Starter-main/src/App.css
@@ -24,9 +24,9 @@ p {
 }
 
 button {
-  background-color: transparent;
-  border: 2px solid steelblue;
-  color: steelblue;
+  background-color: black; 
+  border: 2px solid rgb(1, 1, 1);
+  color: rgb(255, 255, 255);
   font-size: 1rem;
   font-family: inherit;
   max-width: 100px;
@@ -35,8 +35,8 @@ button {
 
 button:hover {
   cursor: pointer;
-  color: white;
-  background-color: steelblue;
+  color: rgb(0, 0, 0);
+  background-color: rgb(250, 250, 250);
 }
 
 .container {
