--- a/ReactJWTFrontend_Starter-main/src/pages/HomePage/HomePage.css
+++ b/ReactJWTFrontend_Starter-main/src/pages/HomePage/HomePage.css
@@ -2,7 +2,8 @@
     margin: 0 auto;
     max-width: 600px;
     padding: 20px;
-    border: 1px solid black;
+    border: 3px solid black;
     border-radius: 10px;
     margin: 10px;
+    background-color: rgb(168, 167, 167);
 }
