--- a/ReactJWTFrontend_Starter-main/src/pages/LoginPage/LoginPage.css
+++ b/ReactJWTFrontend_Starter-main/src/pages/LoginPage/LoginPage.css
@@ -1,3 +1,13 @@
 .error {
   color: red;
 }
+
+.text-container{
+  margin: 0 auto;
+  max-width: 600px;
+  padding: 20px;
+  border: 3px solid black;
+  border-radius: 10px;
+  margin: 10px;
+  background-color: rgb(168, 167, 167);
+}
